--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,8 @@ body {
   margin: 0;
 }
 
+@media screen and (min-width: 320px) and (max-width: 576px) {
+   .hide-small {
+      display: none;
+  }
+}
